--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode develop",
+    "build": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -12,7 +12,8 @@
     "bootstrap-vue": "^2.2.2",
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuejs-logger": "1.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
