--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
-    "vuejs-logger": "1.5.3"
+    "vuejs-logger": "1.5.3",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
